--- a/pages/post/post-detail/post-detail.wxml
+++ b/pages/post/post-detail/post-detail.wxml
@@ -1,18 +1,19 @@
 <view class='container'>
   <image class='head-image' src="{{postData.headImgSrc}}"></image>
   <image class='audio' src="/images/music/music-start.png"></image>
-  <view class='author-date' >
+  <view class='author-date'>
     <image class='avatar' src="{{postData.avatar}}"></image>
-    <text class='author' >{{postData.author}}</text>
+    <text class='author'>{{postData.author}}</text>
     <text class='const-text' >发表于</text>
-    <text class='date' >{{postData.dataTime}}</text>
+    <text class='date'>{{postData.dataTime}}</text>
   </view>
   <text class='title' >{{postData.title}}</text>
   <view class='tool' >
     <view class='circle-img' >
         <image wx:if="{{collected}}" catchtap='onColletionTap'  src="/images/icon/collection.png"></image>
         <image wx:else catchtap='onColletionTap'  src="/images/icon/collection-anti.png"></image>
-        <image catchtap='onShareTap' class='share-img' src="/images/icon/share.png"></image>
+        <button open-type="share" class='share-img' style="background-image:url(/images/icon/share.png)"></button>
+        <!-- <image catchtap='onShareTap' class='share-img' src="/images/icon/share.png"></image> -->
     </view>
     <view class='horizon' ></view>
   </view>
