--- a/pages/movies/stars/stars-template.wxml
+++ b/pages/movies/stars/stars-template.wxml
@@ -1,10 +1,12 @@
 <template name="starsTemplate">
-    <view>
-        <image src="/images/icon/star.png"></image>
-        <image src="/images/icon/star.png"></image>
-        <image src="/images/icon/star.png"></image>
-        <image src="/images/icon/star.png"></image>
-        <image src="/images/icon/none-star.png"></image>
-        <text>8.0</text>
+    <view class="stars-container">
+        <view class="stars">
+            <image src="/images/icon/star.png"></image>
+            <image src="/images/icon/star.png"></image>
+            <image src="/images/icon/star.png"></image>
+            <image src="/images/icon/star.png"></image>
+            <image src="/images/icon/none-star.png"></image>
+        </view>
+        <text class="star-score">8.0</text>
     </view>
 </template>
