--- a/app.wxss
+++ b/app.wxss
@@ -1,1 +1,11 @@
 /**app.wxss**/
+
+text {
+    font-family: MicroSoft Yahei;
+    font-size: 24rpx;
+    color: #666;
+}
+
+input {
+    font-family: MicroSoft YaHei;
+}
