--- a/pages/movies/movie/movie-template.wxml
+++ b/pages/movies/movie/movie-template.wxml
@@ -1,8 +1,9 @@
 <import src="../stars/stars-template.wxml" />
+
 <template name="movieTemplate">
-    <view>
-        <image src="/images/zoo.png"></image>
-        <text>动物世界</text>
-        <template is="starsTemplate"></template>
-</view>
+    <view class="movie-container">
+        <image class="movie-img" src="/images/zoo.png"></image>
+        <text class="movie-title">动物世界</text>
+        <template is="starsTemplate" />
+    </view>
 </template>
