--- a/pages/movies/movies.wxml
+++ b/pages/movies/movies.wxml
@@ -1,6 +1,12 @@
 <import src="movie-list/movie-list-template.wxml" />
-<view>
-    <template is="movieListTemplate" />
-    <template is="movieListTemplate" />
-    <template is="movieListTemplate" />
+<view class="container">
+    <view class="movies-template">
+        <template is="movieListTemplate" />
+    </view>
+    <view class="movies-template">
+        <template is="movieListTemplate" />
+    </view>
+    <view class="movies-template">
+        <template is="movieListTemplate" />
+    </view>
 </view>
