--- a/pages/movies/movie/movie-template.wxml
+++ b/pages/movies/movie/movie-template.wxml
@@ -2,8 +2,8 @@
 
 <template name="movieTemplate">
     <view class="movie-container">
-        <image class="movie-img" src="/images/zoo.png"></image>
-        <text class="movie-title">动物世界</text>
-        <template is="starsTemplate" />
+        <image class="movie-img" src="{{coverageUrl}}"></image>
+        <text class="movie-title">{{title}}</text>
+        <template is="starsTemplate" data="{{average}}"/>
     </view>
 </template>
