--- a/pages/movies/stars/stars-template.wxml
+++ b/pages/movies/stars/stars-template.wxml
@@ -7,6 +7,6 @@
             <image src="/images/icon/star.png"></image>
             <image src="/images/icon/none-star.png"></image>
         </view>
-        <text class="star-score">8.0</text>
+        <text class="star-score">{{average}}</text>
     </view>
 </template>
