--- a/pages/movies/movies.wxss
+++ b/pages/movies/movies.wxss
@@ -3,6 +3,31 @@
     background-color: #f2f2f2;
 }
 
+.search {
+    background-color: #f2f2f2;
+    height: 80rpx;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.search input {
+    width: 600rpx;
+    height: 100%;
+    margin-left: 20px;
+    font-size: 28rpx;
+}
+
+.search-img {
+    margin: auto 0 auto 20rpx;
+}
+
+.placeholder {
+    font-size: 14px;
+    color: #d1d1d1;
+    margin-left: 20rpx;
+}
+
 .movies-template {
     margin-bottom: 30rpx;
 }
