--- a/pages/movies/movie-detail/movie-detail.wxss
+++ b/pages/movies/movie-detail/movie-detail.wxss
@@ -118,6 +118,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 50rpx;
+    margin-bottom: 50rpx;
 }
 
 .cast-font {
@@ -136,7 +137,9 @@
 }
 
 .cast-imgs {
+    /* 不加这个属性的话，scroll-view超宽后会换行 */
     white-space: nowrap;
+    margin-top: 20rpx;
 }
 
 .cast-img {
